@@ -132,8 +132,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   emergency and theorical/effective meeting date into which item is or will be presented
 - Added possibility to manually clone an item to another config.  It is now possible to define states in
   which an item may be sent manually and states in which an item will be sent automatically.  Take care that when
-  an item is cloned manually, the transitions to trigger on new item will NOT be triggered, this is reserved to
-  items cloned automatically
+  an item is cloned manually, the transitions to trigger on new item will NOT be triggered unless user is a
+  MeetingManager.  If an item is sent automatically, in this case transitions will be triggered on resulting item,
+  no matter current user roles
 - Added leading icon 'sent from' that shows on an item if it is the result of another item sent from another
   configuration.  This way we have the leading icon on the original item with informations about the resulting item
   and on the resulting item with informations about the original item
